Added the ability to save the settings you change in jsCompiler.  There is one setting saved for each solution

--- a/jsCompiler/jsCompiler.csproj
+++ b/jsCompiler/jsCompiler.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{01580F38-B453-47BF-89A0-63F6F9085208}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>jsCompiler</RootNamespace>
+    <RootNamespace>SoftGPL.jsCompiler</RootNamespace>
     <AssemblyName>jsCompiler</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -108,7 +108,6 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
