--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -46,9 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NotifyPropertyChanged.cs" />
+    <Compile Include="Events\NotifyPropertyChanged.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Serializer.cs" />
+    <Compile Include="Xml\Serializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Key.snk" />
