--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Events\NotifyPropertyChanged.cs" />
+    <Compile Include="Process\Java.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Xml\Serializer.cs" />
   </ItemGroup>
