--- a/vs10/vs10.csproj
+++ b/vs10/vs10.csproj
@@ -182,6 +182,10 @@
       <Project>{17C0A7F5-FA59-4BB0-B281-0388B4D41998}</Project>
       <Name>Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\googClosure\googClosure.csproj">
+      <Project>{3A40DAB4-C7AA-440B-9450-E2FD539D241D}</Project>
+      <Name>googClosure</Name>
+    </ProjectReference>
     <ProjectReference Include="..\jsCompiler\jsCompiler.csproj">
       <Project>{01580F38-B453-47BF-89A0-63F6F9085208}</Project>
       <Name>jsCompiler</Name>
@@ -189,6 +193,9 @@
   </ItemGroup>
   <PropertyGroup>
     <UseCodebase>true</UseCodebase>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v10.0\VSSDK\Microsoft.VsSDK.targets" />
