--- a/jsCompiler/jsCompiler.csproj
+++ b/jsCompiler/jsCompiler.csproj
@@ -39,7 +39,7 @@
   <ItemGroup>
     <Reference Include="jni4net.n-0.8.6.0, Version=0.8.6.0, Culture=neutral, PublicKeyToken=acd6606575b3432e, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\googClosure\jni4net\jni4net.n-0.8.6.0.dll</HintPath>
+      <HintPath>..\googClosure\lib\jni4net\jni4net.n-0.8.6.0.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
